feat: 提交产品图片

--- a/content/shopassistant/about.html
+++ b/content/shopassistant/about.html
@@ -164,18 +164,17 @@
           "
         >
           <div class="row">
-            <div class="col-md-2" data-col="one-sixth">
+            <div class="col-md-1" data-col="one-sixth">
               <div class="placeholder">&nbsp;</div>
             </div>
             <div
-              class="col-md-4"
+              class="col-md-5 about"
               data-col="one-third"
-              style="padding: 120px 5% 0"
             >
               <div class="mobile_align_center">
                 <hr class="no_line" style="margin: 0 auto 10px auto" />
                 <h1 class="line-hight-168">
-                  <p lang="about_first"></p>
+                  <p lang="about_first" class="about-title"></p>
                   <p lang="about_second" class="themecolor"></p>
                 </h1>
               </div>
