--- a/content/shopassistant/culture.html
+++ b/content/shopassistant/culture.html
@@ -44,7 +44,7 @@
   <body
     class="page content-brightness-light input-brightness-light style-simple button-custom layout-full-width no-content-padding no-shadows header-classic sticky-header sticky-tb-color ab-hide subheader-both-center menu-link-color menuo-no-borders mobile-tb-center mobile-side-slide mobile-mini-mr-ll mobile-sticky mobile-header-mini mobile-icon-user-ss mobile-icon-wishlist-ss mobile-icon-search-ss mobile-icon-wpml-ss mobile-icon-action-ss be-page-86"
   >
-    <div id="Wrapper">
+    <div id="Wrapper" class="culture-wrapper" lang-style="culture">
       <div id="Header_wrapper">
         <header id="Header">
           <div id="Top_bar">
@@ -155,7 +155,7 @@
         <div
           class="section no-margin-h no-margin-v full-width wrap-reverse"
           style="
-            background-image: url(images/shopassistant-section-bg11.webp);
+            background-image: url(images/culture.png);
             background-repeat: no-repeat;
             background-position: left bottom;
           "
@@ -167,16 +167,13 @@
             <div
               class="col-md-5 culture"
               data-col="one-third"
-              style="padding: 120px 0 0"
             >
               <div class="column_attr clearfix mobile_align_center">
                 <!-- <img src="images/shopassistant-sep1.svg" /> -->
                 <hr class="no_line" style="margin: 0 auto 10px auto" />
                 <h1 class="line-hight-168">
-                  <p class="line-hight-110 top-title">我们的<br />文化灯塔</p>
-                  <p class="themecolor">
-                    面对困难和挑战，<br />保持希望和坚定的信念
-                  </p>
+                  <p class="line-hight-110 top-title" lang="culture_first"></p>
+                  <p class="themecolor" lang="culture_second"></p>
                 </h1>
                 <!-- <img src="images/shopassistant-sep2.png" /> -->
               </div>
@@ -220,14 +217,14 @@
                         padding: 60px 0 0;
                       "
                     >
-                      <h3>企业使命</h3>
+                      <h3 lang="culture_third"></h3>
                       <img
                         class="scale-with-grid"
                         src="images/shopassistant-sep2.png"
                       />
                       <hr class="no_line" style="margin: 0 auto 15px auto" />
-                      <p class="culture-describe">提供便捷，可靠的</p>
-                      <p class="culture-describe">全球优选购物体验</p>
+                      <p class="culture-describe" lang="culture_fourth"></p>
+                      <p class="culture-describe" lang="culture_fifth"></p>
                     </div>
                   </div>
                 </div>
@@ -255,7 +252,7 @@
             <div class="row">
               <div class="col-md-6" data-col="one-second">
                 <div class="row">
-                  <div class="col-md-9">
+                  <div class="col-md-12">
                     <div
                       class="column_attr clearfix mobile_align_center"
                       style="
@@ -265,13 +262,13 @@
                         padding: 60px 0 0;
                       "
                     >
-                      <h3>企业愿景</h3>
+                      <h3 lang="culture_sixth"></h3>
                       <img
                         class="scale-with-grid"
                         src="images/shopassistant-sep2.png"
                       />
                       <hr class="no_line" style="margin: 0 auto 15px auto" />
-                      <p class="culture-describe">让益铭走进每个家庭</p>
+                      <p class="culture-describe" lang="culture_seventh"></p>
                     </div>
                   </div>
                 </div>
@@ -339,13 +336,13 @@
                         padding: 60px 0 0;
                       "
                     >
-                      <h3>核心价值观</h3>
+                      <h3 lang="culture_eighth"></h3>
                       <img
                         class="scale-with-grid"
                         src="images/shopassistant-sep2.png"
                       />
                       <hr class="no_line" style="margin: 0 auto 15px auto" />
-                      <p class="culture-describe">诚信 创新 合作 共赢</p>
+                      <p class="culture-describe" lang="culture_ninth"></p>
                     </div>
                   </div>
                 </div>
@@ -373,7 +370,7 @@
             <div class="row">
               <div class="col-md-6" data-col="one-second">
                 <div class="row">
-                  <div class="col-md-9">
+                  <div class="col-md-12">
                     <div
                       class="column_attr clearfix mobile_align_center"
                       style="
@@ -383,14 +380,14 @@
                         padding: 60px 0 0;
                       "
                     >
-                      <h3>企业信条</h3>
+                      <h3 lang="culture_tenth"></h3>
                       <img
                         class="scale-with-grid"
                         src="images/shopassistant-sep2.png"
                       />
                       <hr class="no_line" style="margin: 0 auto 15px auto" />
-                      <p class="culture-describe">质量铸造品牌</p>
-                      <p class="culture-describe">服务赢得未来</p>
+                      <p class="culture-describe" lang="culture_eleventh"></p>
+                      <p class="culture-describe" lang="culture_twelveth"></p>
                     </div>
                   </div>
                 </div>
