--- a/content/shopassistant/team.html
+++ b/content/shopassistant/team.html
@@ -45,7 +45,7 @@
   <body
     class="page content-brightness-light input-brightness-light style-simple button-custom layout-full-width no-content-padding no-shadows header-classic sticky-header sticky-tb-color ab-hide subheader-both-center menu-link-color menuo-no-borders mobile-tb-center mobile-side-slide mobile-mini-mr-ll mobile-sticky mobile-header-mini mobile-icon-user-ss mobile-icon-wishlist-ss mobile-icon-search-ss mobile-icon-wpml-ss mobile-icon-action-ss be-page-88"
   >
-    <div id="Wrapper">
+    <div id="Wrapper" class="team-wrapper" lang-style="team">
       <div id="Header_wrapper">
         <header id="Header">
           <div id="Top_bar">
@@ -157,7 +157,7 @@
           class="section no-margin-h no-margin-v full-width wrap-reverse bg-contain"
           style="
             padding-bottom: 100px;
-            background-image: url(images/shopassistant-section-bg6.webp);
+            background-image: url(images/team.png);
             background-repeat: no-repeat;
             background-position: left bottom;
           "
@@ -167,15 +167,14 @@
               <div class="placeholder">&nbsp;</div>
             </div>
             <div
-              class="col-md-5"
+              class="col-md-5 team"
               data-col="one-third"
-              style="padding: 120px 5% 0"
             >
               <div class="mobile_align_center">
                 <hr class="no_line" style="margin: 0 auto 10px auto" />
                 <h1 class="line-hight-168">
-                  解锁员工风采
-                  <p class="themecolor">感受团队活力</p>
+                  <span lang="team_first" class="team-title"></span>
+                  <p class="themecolor" lang="team_second"></p>
                 </h1>
               </div>
             </div>
@@ -193,14 +192,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/2020年团队拓展活动.jpg"
-                    alt="2020年团队拓展活动"
+                    lang-alt="team_third"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>2020年团队拓展活动</h4>
+                            <h4 lang="team_third"></h4>
                           </a>
                         </div>
                       </div>
@@ -210,14 +209,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/西安团建活动.jpg"
-                    alt="西安团建活动"
+                    lang-alt="team_fourth"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>西安团建活动</h4>
+                            <h4 lang="team_fourth"></h4>
                           </a>
                         </div>
                       </div>
@@ -227,14 +226,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/捐赠九江都昌儿童爱心学校.jpg"
-                    alt="捐赠九江都昌儿童爱心学校"
+                    lang-alt="team_fifth"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>捐赠九江都昌儿童爱心学校</h4>
+                            <h4 lang="team_fifth"></h4>
                           </a>
                         </div>
                       </div>
@@ -244,14 +243,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/三八妇女节团建活动.jpg"
-                    alt="三八妇女节团建活动"
+                    lang-alt="team_sixth"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>三八妇女节团建活动</h4>
+                            <h4 lang="team_sixth"></h4>
                           </a>
                         </div>
                       </div>
@@ -263,14 +262,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/2023年团队拓展活动.jpg"
-                    alt="2023年团队拓展活动"
+                    lang-alt="team_seventh"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>2023年团队拓展活动</h4>
+                            <h4 lang="team_seventh"></h4>
                           </a>
                         </div>
                       </div>
@@ -280,14 +279,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/年会大合照.jpg"
-                    alt="年会大合照"
+                    lang-alt="team_eighth"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>年会大合照</h4>
+                            <h4 lang="team_eighth"></h4>
                           </a>
                         </div>
                       </div>
@@ -297,14 +296,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/公司爱心捐助大学生.jpg"
-                    alt="公司爱心捐助大学生"
+                    lang-alt="team_ninth"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>公司爱心捐助大学生</h4>
+                            <h4 lang="team_ninth"></h4>
                           </a>
                         </div>
                       </div>
@@ -314,14 +313,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/2021年年度总结大会.jpg"
-                    alt="2021年年度总结大会"
+                    lang-alt="team_tenth"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>2021年年度总结大会</h4>
+                            <h4 lang="team_tenth"></h4>
                           </a>
                         </div>
                       </div>
@@ -333,14 +332,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/董事长致辞.jpg"
-                    alt="董事长致辞"
+                    lang-alt="team_eleventh"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>董事长致辞</h4>
+                            <h4 lang="team_eleventh"></h4>
                           </a>
                         </div>
                       </div>
@@ -350,14 +349,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/年会颁奖.jpg"
-                    alt="年会颁奖"
+                    lang-alt="team_twelveth"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>年会颁奖</h4>
+                            <h4 lang="team_twelveth"></h4>
                           </a>
                         </div>
                       </div>
@@ -367,14 +366,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/2022年团队拓展活动.jpg"
-                    alt="2022年团队拓展活动"
+                    lang-alt="team_thirteenth"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>2022年团队拓展活动</h4>
+                            <h4 lang="team_thirteenth"></h4>
                           </a>
                         </div>
                       </div>
@@ -384,14 +383,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/员工大合照.jpg"
-                    alt="员工大合照"
+                    lang-alt="team_fourteenth"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>员工大合照</h4>
+                            <h4 lang="team_fourteenth"></h4>
                           </a>
                         </div>
                       </div>
@@ -401,14 +400,14 @@
                 <div class="img-wrap">
                   <img
                     src="images/staff-presence/株洲方特团建活动.jpg"
-                    alt="株洲方特团建活动"
+                    lang-alt="team_fifteenth"
                   />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
                         <div class="sup-meta-wrap">
                           <a class="sup-title" href="#" one-link-mark="yes">
-                            <h4>株洲方特团建活动</h4>
+                            <h4 lang="team_fifteenth"></h4>
                           </a>
                         </div>
                       </div>
@@ -426,9 +425,9 @@
               <div class="col-12">
                 <div class="text-center" style="line-height: 88px">
                   <h2>
-                    <span class="themecolor">欢迎探索我们团队的</span>
+                    <span class="themecolor" lang="team_sixteenth"></span>
                   </h2>
-                  <h2 style="margin-top: 20px">多样魅力与独特故事</h2>
+                  <h2 style="margin-top: 20px" lang="team_seventeenth"></h2>
                   <div class="image_wrapper">
                     <img
                       class="scale-with-grid"
